--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "homepage": "https://github.com/CA-G12/Books-Station-Moh-Saif#readme",
   "dependencies": {
-   
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
-    "jest": "^28.1.3",
-    "supertest": "^6.2.4",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4"
   }
 }
