--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/CA-G12/Books-Station-Moh-Saif#readme",
   "dependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "eslint": "^8.21.0",
